<resources>
    <string name="app_name">Peestash</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connexion">Connexion</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logo">peestash logo</string>
    <string name="hint_email">Email</string>
    <string name="votreEmail">Votre e-mail</string>
    <string name="hint_password">Mot de passe</string>
    <string name="mdpOublie">Mot de passe oublié ?</string>
    <string name="btn_register_artist">Artiste</string>
    <string name="btn_register_etablissement">Établissement</string>
    <string name="inscription">Pas encore membre ? Inscrivez-vous maintenant :</string>
    <string name="title_activity_register_artist">RegisterArtistActivity</string>
    <string name="title_activity_register_etablissement">RegisterEtablissementActivity</string>
    <string name="title_activity_artist_home">ArtistHomeActivity</string>
    <string name="title_activity_etablissement_home">EtablissementHomeActivity</string>
    <string name="title_activity_edit_artist_profil">EditArtistProfilActivity</string>
    <string name="title_activity_liste_deroulante">ListeDeroulanteActivity</string>
    <string name="title_activity_edit_etablissement_profil">EditEtablissementProfilActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
</resources>
