<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

        >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:focusableInTouchMode="true"
                  android:padding="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
            <ImageView
                    android:id="@+id/logoPeestash"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/peestashlogo" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

            <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />

            <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/input_login"
                    android:textColorHint="@color/input_login_hint" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mdpOublie"
                    android:textColor="@color/gris"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"
                    android:gravity="right"
                    />

            <!-- Login Button -->

            <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/orange_button"
                    android:text="@string/connexion"
                    style="@style/button_text" />

            <!-- Link to Login Screen -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inscription"
                    android:textColor="@color/gris"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"
                    android:gravity="right"
                    />

            <Button
                    android:id="@+id/btnRegisterArtist"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dip"
                    android:background="@null"
                    android:text="@string/btn_register_artist"
                    android:textAllCaps="false"
                    android:textColor="@color/gris"
                    android:textSize="15dp" />
            <Button
                    android:id="@+id/btnRegisterEtablissement"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dip"
                    android:background="@null"
                    android:text="@string/btn_register_etablissement"
                    android:textAllCaps="false"
                    android:textColor="@color/gris"
                    android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>


